--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -6,8 +6,7 @@
     android:orientation="vertical"
     android:baselineAligned="true">
 
-    <fragment
-        android:name="com.leanote.android.ui.SignInFragment"
+    <FrameLayout
         android:id="@+id/sign_in_fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
