修复小米手机最自定义的style不识别的问题

--- a/app/src/main/res/layout/new_account_user_fragment_screen.xml
+++ b/app/src/main/res/layout/new_account_user_fragment_screen.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true">
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:gravity="center"
         android:orientation="vertical">
 
 
         <com.leanote.android.widget.LeaLinearLayoutSizeBound
-            app:maxWidth="@dimen/nux_width"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:gravity="center"
             android:layout_weight="1"
             android:animateLayoutChanges="true"
-            android:orientation="vertical">
+            android:gravity="center"
+            android:orientation="vertical"
+            app:maxWidth="@dimen/nux_width">
 
             <com.leanote.android.widget.LeaTextView
                 android:id="@+id/create_account_label"
-                android:text="@string/create_account_wpcom"
                 style="@style/Leanote.NUXTitle"
-                app:fontVariation="light"
-                app:fixWidowWords="true"/>
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/create_account_wpcom"
+                app:fixWidowWords="true"
+                app:fontVariation="light"/>
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -35,73 +37,73 @@
 
                 <com.leanote.android.widget.OpenSansEditText
                     android:id="@+id/email_address"
+                    style="@style/Leanote.NUXEditText"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    style="@style/Leanote.NUXEditText"
                     android:hint="@string/email_hint"
                     android:inputType="textEmailAddress"
                     app:persistenceEnabled="true"/>
 
                 <ImageView
+                    android:id="@+id/imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/imageView"
-                    android:layout_gravity="center_horizontal"
                     android:layout_alignParentEnd="false"
+                    android:layout_alignParentLeft="false"
                     android:layout_alignParentRight="false"
                     android:layout_alignParentStart="false"
-                    android:layout_alignParentLeft="false"
-                    android:src="@drawable/dashicon_email"
                     android:layout_centerVertical="true"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="10dp"
+                    android:src="@drawable/dashicon_email"
                     android:tint="@color/grey_darken_10"/>
 
             </RelativeLayout>
 
 
             <RelativeLayout
+                android:id="@+id/relativeLayout2"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="30dp"
-                android:background="@color/white"
-                android:id="@+id/relativeLayout2">
+                android:background="@color/white">
 
                 <com.leanote.android.widget.OpenSansEditText
                     android:id="@+id/password"
+                    style="@style/Leanote.NUXEditText"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:inputType="textPassword"
-                    style="@style/Leanote.NUXEditText"
+                    android:layout_marginRight="38dp"
                     android:hint="@string/password"
-                    android:layout_marginRight="38dp"/>
+                    android:inputType="textPassword"/>
 
                 <ImageView
+                    android:id="@+id/imageView3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/imageView3"
-                    android:layout_gravity="center_horizontal"
                     android:layout_alignParentEnd="false"
-                    android:layout_alignParentRight="false"
                     android:layout_alignParentLeft="false"
+                    android:layout_alignParentRight="false"
                     android:layout_alignParentStart="false"
-                    android:src="@drawable/dashicon_lock"
                     android:layout_centerVertical="true"
+                    android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="10dp"
+                    android:src="@drawable/dashicon_lock"
                     android:tint="@color/grey_darken_10"/>
 
                 <ImageView
+                    android:id="@+id/password_visibility"
                     android:layout_width="24dp"
                     android:layout_height="wrap_content"
-                    android:id="@+id/password_visibility"
-                    android:layout_gravity="center_horizontal"
                     android:layout_alignParentEnd="false"
-
                     android:layout_alignParentLeft="false"
-                    android:layout_alignParentStart="false"
-                    android:src="@drawable/dashicon_eye_closed"
-                    android:layout_centerVertical="true"
-                    android:layout_marginRight="16dp"
+
                     android:layout_alignParentRight="true"
+                    android:layout_alignParentStart="false"
+                    android:layout_centerVertical="true"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_marginRight="16dp"
+                    android:src="@drawable/dashicon_eye_closed"
                     android:tint="@color/nux_eye_icon_color_closed"/>
             </RelativeLayout>
 
@@ -113,40 +115,40 @@
                 android:layout_marginRight="16dp">
 
                 <com.leanote.android.widget.LeaTextView
-                    style="@style/Leanote.NUXPrimaryButton"
                     android:id="@+id/signup_button"
+                    style="@style/Leanote.NUXPrimaryButton"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/nux_main_button_height"
-                    android:text="@string/nux_welcome_create_account"
                     android:clickable="true"
+                    android:enabled="false"
                     android:gravity="center"
-                    android:enabled="false"/>
+                    android:text="@string/nux_welcome_create_account"/>
 
                 <RelativeLayout
                     android:id="@+id/nux_sign_in_progress_bar"
                     style="@style/Leanote.NUXPrimaryButton"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/nux_main_button_height"
-                    android:visibility="gone"
-                    android:enabled="false">
+                    android:enabled="false"
+                    android:visibility="gone">
 
                     <ProgressBar
                         android:layout_width="24dp"
                         android:layout_height="24dp"
-                        android:layout_centerVertical="true"
-                        android:layout_centerHorizontal="true"/>
+                        android:layout_centerHorizontal="true"
+                        android:layout_centerVertical="true"/>
                 </RelativeLayout>
 
             </RelativeLayout>
 
             <com.leanote.android.widget.LeaTextView
-                style="@style/Leanote.NUXFlatButton"
                 android:id="@+id/nux_sign_in_progress_text"
+                style="@style/Leanote.NUXFlatButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:visibility="gone"
+                android:gravity="center|top"
                 android:textColor="@color/blue_light"
-                android:gravity="center|top"/>
+                android:visibility="gone"/>
 
         </com.leanote.android.widget.LeaLinearLayoutSizeBound>
     </LinearLayout>
