--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:id="@+id/sign_in_scroll_view"
-    android:animateLayoutChanges="true"
-    android:fillViewport="true"
-    android:gravity="center">
+<ScrollView android:id="@+id/sign_in_scroll_view"
+            xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:animateLayoutChanges="true"
+            android:fillViewport="true"
+            android:gravity="center">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -18,8 +18,8 @@
 
 
         <com.leanote.android.widget.LeaLinearLayoutSizeBound
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
             android:animateLayoutChanges="true"
             android:gravity="center"
@@ -36,7 +36,7 @@
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_centerInParent="true"
-                    android:src="@drawable/leanote_icon_circle" />
+                    android:src="@drawable/leanote_icon_circle"/>
 
             </RelativeLayout>
 
@@ -44,13 +44,13 @@
                 android:id="@+id/nux_jetpack_auth_label"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textColor="@color/white"
+                android:gravity="center_horizontal"
+                android:paddingBottom="@dimen/margin_extra_large"
                 android:paddingLeft="@dimen/margin_extra_large"
                 android:paddingRight="@dimen/margin_extra_large"
-                android:paddingBottom="@dimen/margin_extra_large"
-                android:gravity="center_horizontal"
                 android:text="@string/sign_in"
-                android:visibility="gone" />
+                android:textColor="@color/white"
+                android:visibility="gone"/>
 
             <RelativeLayout
                 android:id="@+id/nux_username_layout"
@@ -65,23 +65,23 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
-                    android:text="yuchuangu85@outlook.com"
                     android:inputType="textEmailAddress"
-                    app:persistenceEnabled="true" />
+                    android:text="yuchuangu85@outlook.com"
+                    app:persistenceEnabled="true"/>
 
                 <ImageView
                     android:id="@+id/imageView"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="false"
+                    android:layout_alignParentLeft="false"
                     android:layout_alignParentRight="false"
                     android:layout_alignParentStart="false"
-                    android:layout_alignParentLeft="false"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="10dp"
                     android:src="@drawable/signin_users"
-                    android:tint="@color/grey_darken_10" />
+                    android:tint="@color/grey_darken_10"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -98,36 +98,36 @@
                     android:layout_height="wrap_content"
                     android:layout_marginRight="38dp"
                     android:hint="@string/password"
-                    android:text="Gyc.198557"
-                    android:inputType="textPassword" />
+                    android:inputType="textPassword"
+                    android:text="Gyc.198557"/>
 
                 <ImageView
                     android:id="@+id/imageView4"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="false"
+                    android:layout_alignParentLeft="false"
                     android:layout_alignParentRight="false"
                     android:layout_alignParentStart="false"
-                    android:layout_alignParentLeft="false"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="10dp"
                     android:src="@drawable/pwd_lock"
-                    android:tint="@color/grey_darken_10" />
+                    android:tint="@color/grey_darken_10"/>
 
                 <ImageView
                     android:id="@+id/password_visibility"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="false"
+                    android:layout_alignParentLeft="false"
                     android:layout_alignParentRight="true"
                     android:layout_alignParentStart="false"
-                    android:layout_alignParentLeft="false"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginRight="16dp"
                     android:src="@drawable/not_show_pwd"
-                    android:tint="@color/nux_eye_icon_color_closed" />
+                    android:tint="@color/nux_eye_icon_color_closed"/>
             </RelativeLayout>
 
             <!--
@@ -167,21 +167,21 @@
                     android:layout_height="wrap_content"
                     android:hint="@string/site_address"
                     android:inputType="textUri"
-                    app:persistenceEnabled="true" />
+                    app:persistenceEnabled="true"/>
 
                 <ImageView
                     android:id="@+id/imageView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_alignParentEnd="false"
+                    android:layout_alignParentLeft="false"
                     android:layout_alignParentRight="false"
                     android:layout_alignParentStart="false"
-                    android:layout_alignParentLeft="false"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginLeft="10dp"
                     android:src="@drawable/self_hosted_site"
-                    android:tint="@color/grey_darken_10" />
+                    android:tint="@color/grey_darken_10"/>
             </RelativeLayout>
 
             <RelativeLayout
@@ -199,7 +199,7 @@
                     android:clickable="true"
                     android:enabled="false"
                     android:gravity="center"
-                    android:text="@string/sign_in" />
+                    android:text="@string/sign_in"/>
 
                 <RelativeLayout
                     android:id="@+id/nux_sign_in_progress_bar"
@@ -213,7 +213,7 @@
                         android:layout_width="24dp"
                         android:layout_height="24dp"
                         android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true" />
+                        android:layout_centerVertical="true"/>
                 </RelativeLayout>
             </RelativeLayout>
 
@@ -257,7 +257,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
-                android:text="@string/forgot_password" />
+                android:text="@string/forgot_password"/>
 
             <com.leanote.android.widget.LeaTextView
                 android:id="@+id/nux_sign_in_progress_text"
@@ -266,13 +266,13 @@
                 android:layout_height="wrap_content"
                 android:gravity="center|top"
                 android:textColor="@color/blue_light"
-                android:visibility="gone" />
+                android:visibility="gone"/>
 
         </com.leanote.android.widget.LeaLinearLayoutSizeBound>
 
         <com.leanote.android.widget.LeaLinearLayoutSizeBound
             android:id="@+id/nux_bottom_buttons"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:animateLayoutChanges="true"
@@ -288,12 +288,12 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:gravity="center|top"
-                android:text="@string/nux_add_selfhosted_blog" />
+                android:text="@string/nux_add_selfhosted_blog"/>
 
             <LinearLayout
                 android:layout_width="fill_parent"
                 android:layout_height="0dp"
-                android:layout_weight="1" />
+                android:layout_weight="1"/>
 
             <com.leanote.android.widget.LeaTextView
                 android:id="@+id/nux_create_account_button"
@@ -304,7 +304,7 @@
                 android:layout_marginLeft="16dp"
                 android:layout_marginRight="16dp"
                 android:gravity="center|top"
-                android:text="@string/nux_welcome_create_account" />
+                android:text="@string/nux_welcome_create_account"/>
         </com.leanote.android.widget.LeaLinearLayoutSizeBound>
     </LinearLayout>
 </ScrollView>
