--- a/app/src/main/res/layout/signin_dialog_fragment.xml
+++ b/app/src/main/res/layout/signin_dialog_fragment.xml
@@ -1,105 +1,105 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/success_view"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:gravity="center"
-    android:orientation="vertical">
+<LinearLayout android:id="@+id/success_view"
+              xmlns:android="http://schemas.android.com/apk/res/android"
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              android:layout_width="fill_parent"
+              android:layout_height="fill_parent"
+              android:gravity="center"
+              android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:layout_weight="1"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp">
+        android:layout_marginRight="16dp"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:orientation="vertical">
 
         <ImageView
             android:id="@+id/nux_dialog_image"
             android:layout_width="50dp"
             android:layout_height="52dp"
+            android:layout_marginBottom="16dp"
             android:src="@drawable/nux_icon_wp"
-            android:tint="@color/white"
-            android:layout_marginBottom="16dp" />
+            android:tint="@color/white"/>
 
         <com.leanote.android.widget.LeaTextView
             android:id="@+id/nux_dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:gravity="center_horizontal"
-            android:textColor="@color/white"
-            android:textSize="@dimen/nux_title_font_size"
             android:lineSpacingExtra="3sp"
             android:shadowColor="@color/black"
             android:shadowDx="0"
             android:shadowDy="1"
             android:shadowRadius="2"
-            app:fontVariation="light"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp" />
+            android:textColor="@color/white"
+            android:textSize="@dimen/nux_title_font_size"
+            app:fontVariation="light"/>
 
         <com.leanote.android.widget.LeaTextView
             android:id="@+id/nux_dialog_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
             android:gravity="center_horizontal"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
-            android:textColor="@color/white"
-            android:textSize="16sp"
             android:shadowColor="@color/black"
             android:shadowDx="0"
             android:shadowDy="1"
             android:shadowRadius="2"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp" />
+            android:textColor="@color/white"
+            android:textSize="16sp"/>
     </LinearLayout>
 
     <LinearLayout
         android:id="@+id/nux_dialog_footer"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:gravity="center"
-        android:layout_width="fill_parent"
         android:layout_marginLeft="12dp"
         android:layout_marginRight="12dp"
+        android:gravity="center"
         android:orientation="vertical">
 
         <com.leanote.android.widget.LeaTextView
             android:id="@+id/nux_dialog_center_button"
-            style="@style/Leanote.NUXPrimaryButton"
             android:layout_width="fill_parent"
             android:layout_height="38dp"
-            android:textColor="@color/white"
-            android:text="@string/faq_button"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center_horizontal"
             android:padding="8dp"
             android:singleLine="true"
-            android:gravity="center_horizontal"
-            android:layout_gravity="center_horizontal" />
+            android:text="@string/faq_button"
+            android:textColor="@color/white"/>
+        <!--style="@style/Leanote.NUXPrimaryButton"-->
 
         <com.leanote.android.widget.LeaTextView
             android:id="@+id/nux_dialog_right_button"
-            style="@style/Leanote.NUXPrimaryButton"
             android:layout_width="fill_parent"
             android:layout_height="38dp"
-            android:text="@string/nux_tutorial_get_started_title"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
             android:padding="8dp"
             android:singleLine="true"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center" />
+            android:text="@string/nux_tutorial_get_started_title"/>
+        <!--style="@style/Leanote.NUXPrimaryButton"-->
 
         <com.leanote.android.widget.LeaTextView
             android:id="@+id/nux_dialog_left_button"
             android:layout_width="fill_parent"
             android:layout_height="38dp"
-            android:textColor="@color/white"
-            android:text="@string/cancel"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
             android:padding="8dp"
             android:singleLine="true"
-            android:layout_gravity="center_horizontal"
-            android:gravity="center" />
+            android:text="@string/cancel"
+            android:textColor="@color/white"/>
     </LinearLayout>
 </LinearLayout>
