--- a/app/src/main/res/menu/edit.xml
+++ b/app/src/main/res/menu/edit.xml
@@ -3,17 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/action_tag"
+        android:id="@+id/action_settings"
         app:showAsAction="always"
-        android:title="tag"/>
+        android:title="@string/action_settings"/>
 
     <item
         android:id="@+id/action_save"
         app:showAsAction="always"
         android:title="@string/save_note"/>
-
-    <item
-        android:id="@+id/action_notebook"
-        app:showAsAction="never"
-        android:title="Notebook"/>
 </menu>
