--- a/app/src/main/res/layout/fragment_new_editor.xml
+++ b/app/src/main/res/layout/fragment_new_editor.xml
@@ -5,12 +5,8 @@
     android:orientation="vertical"
     tools:context="com.leanote.android.editor.EditorFragment">
 
-    <com.leanote.android.widget.LeaWebView
-        android:id="@+id/web_editor"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
     <LinearLayout
+        android:id="@+id/ll_tools"
         android:layout_width="match_parent"
         android:layout_height="@dimen/format_bar_height"
         android:layout_alignParentBottom="true"
@@ -55,4 +51,10 @@
             android:layout_height="match_parent"
             android:background="@drawable/format_bar_button_ul" />
     </LinearLayout>
+
+    <com.leanote.android.widget.LeaWebView
+        android:id="@+id/web_editor"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@id/ll_tools" />
 </RelativeLayout>
