hide button bar at the every beginning

--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -16,7 +16,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:paddingEnd="16dp"
-        android:paddingStart="16dp">
+        android:paddingStart="16dp"
+        android:visibility="gone"
+        android:background="#fff">
 
         <TextView
             android:id="@+id/tv_revert"
