--- a/app/src/main/res/layout/activity_preview.xml
+++ b/app/src/main/res/layout/activity_preview.xml
@@ -5,20 +5,23 @@
     android:layout_height="match_parent"
     tools:context="com.leanote.android.ui.note.NoteEditActivity">
 
+    <include layout="@layout/new_toolbar" />
+
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/toolbar" />
 
     <RelativeLayout
         android:id="@+id/rl_action"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="#fff"
         android:paddingEnd="16dp"
         android:paddingStart="16dp"
-        android:visibility="gone"
-        android:background="#fff">
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/tv_revert"
