add selection for list recent notes

--- a/app/src/main/res/layout/activity_new_main.xml
+++ b/app/src/main/res/layout/activity_new_main.xml
@@ -90,6 +90,7 @@
                         android:textSize="18sp" />
 
                     <TextView
+                        android:id="@+id/tv_recent_notes"
                         android:layout_width="240dp"
                         android:layout_height="wrap_content"
                         android:padding="8dp"
