--- a/app/src/main/res/values/refact_color.xml
+++ b/app/src/main/res/values/refact_color.xml
@@ -7,4 +7,9 @@
 
     <color name="navigation_list_text">#de000000</color>
     <color name="navigation_subheader_text">#8a000000</color>
+
+    <color name="primary_text_light">#de000000</color>
+    <color name="secondary_text_light">#8a000000</color>
+    <color name="hint_text_light">#61000000</color>
+    <color name="divider_light">#1f000000</color>
 </resources>
