--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -380,5 +380,25 @@
         </item>
     </style>
 
+    <style name="SettingsStatus">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/hint_text_light</item>
+    </style>
+
+    <style name="SettingsSecondaryText">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/secondary_text_light</item>
+    </style>
+
+    <style name="SettingsLabel">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/primary_text_light</item>
+    </style>
+
+    <style name="SettingsPanel">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:padding">16dp</item>
+    </style>
 
 </resources>
