--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -1,149 +1,183 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
     <include layout="@layout/new_toolbar" />
 
-    <RelativeLayout
-        android:id="@+id/rl_avatar"
-        style="@style/SettingsPanel"
-        android:orientation="vertical">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-        <TextView
-            style="@style/SettingsSecondaryText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_centerVertical="true"
-            android:text="Avatar" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
 
-        <ImageView
-            android:id="@+id/iv_avatar"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:text="Markdown" />
+            <LinearLayout
+                style="@style/SettingsPanel"
+                android:orientation="vertical">
 
-    </RelativeLayout>
+                <TextView
+                    style="@style/SettingsSecondaryText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Host" />
 
-    <include layout="@layout/divider" />
+                <TextView
+                    android:id="@+id/tv_host"
+                    style="@style/SettingsStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="https://leanote.com" />
 
-    <LinearLayout
-        style="@style/SettingsPanel"
-        android:orientation="vertical">
+            </LinearLayout>
 
-        <TextView
-            style="@style/SettingsSecondaryText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Email" />
+            <include layout="@layout/divider" />
 
-        <TextView
-            android:id="@+id/tv_email"
-            style="@style/SettingsStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <RelativeLayout
+                android:id="@+id/rl_avatar"
+                style="@style/SettingsPanel"
+                android:orientation="vertical">
 
-    </LinearLayout>
+                <TextView
+                    style="@style/SettingsSecondaryText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentStart="true"
+                    android:layout_centerVertical="true"
+                    android:text="Avatar" />
 
-    <include layout="@layout/divider" />
+                <ImageView
+                    android:id="@+id/iv_avatar"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    tools:text="Markdown" />
 
-    <LinearLayout
-        android:id="@+id/ll_user_name"
-        style="@style/SettingsPanel"
-        android:orientation="vertical">
+            </RelativeLayout>
 
-        <TextView
-            style="@style/SettingsSecondaryText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="User name" />
+            <include layout="@layout/divider" />
 
-        <TextView
-            android:id="@+id/tv_user_name"
-            style="@style/SettingsStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            <LinearLayout
+                style="@style/SettingsPanel"
+                android:orientation="vertical">
 
-    </LinearLayout>
+                <TextView
+                    style="@style/SettingsSecondaryText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Email" />
 
-    <include layout="@layout/divider" />
+                <TextView
+                    android:id="@+id/tv_email"
+                    style="@style/SettingsStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-    <LinearLayout
-        android:id="@+id/ll_change_password"
-        style="@style/SettingsPanel"
-        android:orientation="vertical">
+            </LinearLayout>
 
-        <TextView
-            style="@style/SettingsSecondaryText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Change password" />
+            <include layout="@layout/divider" />
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll_user_name"
+                style="@style/SettingsPanel"
+                android:orientation="vertical">
 
-    <include layout="@layout/divider" />
+                <TextView
+                    style="@style/SettingsSecondaryText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="User name" />
 
-    <LinearLayout
-        android:id="@+id/ll_editor"
-        style="@style/SettingsPanel"
-        android:orientation="vertical">
+                <TextView
+                    android:id="@+id/tv_user_name"
+                    style="@style/SettingsStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
 
-        <TextView
-            style="@style/SettingsSecondaryText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Editor" />
+            </LinearLayout>
 
-        <TextView
-            android:id="@+id/tv_editor"
-            style="@style/SettingsStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Markdown" />
+            <include layout="@layout/divider" />
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll_change_password"
+                style="@style/SettingsPanel"
+                android:orientation="vertical">
 
-    <include layout="@layout/divider" />
+                <TextView
+                    style="@style/SettingsSecondaryText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Change password" />
 
-    <LinearLayout
-        android:id="@+id/ll_image_size"
-        style="@style/SettingsPanel"
-        android:orientation="vertical">
+            </LinearLayout>
 
-        <TextView
-            style="@style/SettingsSecondaryText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Image size" />
+            <include layout="@layout/divider" />
 
-        <TextView
-            android:id="@+id/tv_image_size"
-            style="@style/SettingsStatus"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="200*200" />
+            <LinearLayout
+                android:id="@+id/ll_editor"
+                style="@style/SettingsPanel"
+                android:orientation="vertical">
 
-    </LinearLayout>
+                <TextView
+                    style="@style/SettingsSecondaryText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Editor" />
 
-    <include layout="@layout/divider" />
+                <TextView
+                    android:id="@+id/tv_editor"
+                    style="@style/SettingsStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="Markdown" />
 
-    <LinearLayout
-        android:id="@+id/ll_log_out"
-        style="@style/SettingsPanel"
-        android:orientation="vertical">
+            </LinearLayout>
 
-        <TextView
-            style="@style/SettingsSecondaryText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Log out" />
+            <include layout="@layout/divider" />
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/ll_image_size"
+                style="@style/SettingsPanel"
+                android:orientation="vertical">
 
-    <include layout="@layout/divider" />
+                <TextView
+                    style="@style/SettingsSecondaryText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Image size" />
+
+                <TextView
+                    android:id="@+id/tv_image_size"
+                    style="@style/SettingsStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    tools:text="200*200" />
+
+            </LinearLayout>
+
+            <include layout="@layout/divider" />
+
+            <LinearLayout
+                android:id="@+id/ll_log_out"
+                style="@style/SettingsPanel"
+                android:orientation="vertical">
+
+                <TextView
+                    style="@style/SettingsSecondaryText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Log out" />
+
+            </LinearLayout>
+
+            <include layout="@layout/divider" />
+
+        </LinearLayout>
+    </ScrollView>
 
 </LinearLayout>
